added faker data and page content

--- a/app/views/about/show.html.erb
+++ b/app/views/about/show.html.erb
@@ -1,2 +1,13 @@
-<h1>About#show</h1>
-<p>Find me in app/views/about/show.html.erb</p>
+<h1>More about this website</h1>
+
+<h2>How the data will be used</h2>
+<p>
+I am planning to use the Faker Gem to generate my data for me. The data set that I will be using is under the Vehicles category. Vehicles can be viewed by Manufacturer, vehicle type, engine Size, and year. 
+
+A manufacturer can have multiple vehicle types
+A vehicle type can have multiple manufacturers
+A manufacturer can have one or more models
+A model can have one and only one manufacturer
+A model can have one to many vehicle types
+A vehicle can have zero to many models
+</p>
