finished project with 100%

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <header>
+      <p>
+        <%= link_to 'Home', manufacturers_path %>,
+        <%= link_to 'About Us', about_show_path %>,
+        <%= link_to 'Search', search_index_path %>
+      </p>
+    </header>
     <%= yield %>
   </body>
 </html>
