--- a/app/views/models/show.html.erb
+++ b/app/views/models/show.html.erb
@@ -1,2 +1,19 @@
 <h1>Models#show</h1>
 <p>Find me in app/views/models/show.html.erb</p>
+
+
+<h2>Model Name</h2>
+<ol>
+    <li>
+        Name: <%= @model.modelName %>
+    </li>
+    <li>
+        Car Options: <%= @model.carOptions %>
+    </li>
+    <li>
+        Number of Doors: <%= @model.numberOfDoors %>
+    </li>
+    <li>
+        Engine Size: <%= @model.engineSize %>
+    </li>
+</ol>
